concord_macros/tests/usage/fail/fail_non_paginated_paginate.stderr
error[E0277]: the trait bound `String: PageItems` is not satisfied
  --> tests/usage/fail/fail_non_paginated_paginate.rs:16:24
   |
16 |     let _ = api.ping().paginate().collect().await?;
   |                        ^^^^^^^^ the trait `PageItems` is not implemented for `String`
   |
help: the trait `PageItems` is implemented for `Vec<T>`
  --> $WORKSPACE/concord_core/src/pagination.rs
   |
   | impl<T: Send + 'static> PageItems for Vec<T> {
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
note: required by a bound in `PendingRequest::<'a, Cx, E, T>::paginate`
  --> $WORKSPACE/concord_core/src/request.rs
   |
   |     pub fn paginate(self) -> PaginatedRequest<'a, Cx, E, T>
   |            -------- required by a bound in this associated function
   |     where
   |         E::Response: PageItems,
   |                      ^^^^^^^^^ required by this bound in `PendingRequest::<'a, Cx, E, T>::paginate`

error[E0277]: the trait bound `String: PageItems` is not satisfied
  --> tests/usage/fail/fail_non_paginated_paginate.rs:16:35
   |
16 |     let _ = api.ping().paginate().collect().await?;
   |                                   ^^^^^^^ the trait `PageItems` is not implemented for `String`
   |
help: the trait `PageItems` is implemented for `Vec<T>`
  --> $WORKSPACE/concord_core/src/pagination.rs
   |
   | impl<T: Send + 'static> PageItems for Vec<T> {
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
note: required by a bound in `PaginatedRequest::<'a, Cx, E, T>::collect`
  --> $WORKSPACE/concord_core/src/request.rs
   |
   |     pub async fn collect(self) -> Result<Vec<<E::Response as PageItems>::Item>, ApiClientError>
   |                  ------- required by a bound in this associated function
   |     where
   |         E::Response: PageItems + HasNextCursor,
   |                      ^^^^^^^^^ required by this bound in `PaginatedRequest::<'a, Cx, E, T>::collect`

error[E0277]: the trait bound `String: HasNextCursor` is not satisfied
  --> tests/usage/fail/fail_non_paginated_paginate.rs:16:35
   |
16 |     let _ = api.ping().paginate().collect().await?;
   |                                   ^^^^^^^ the trait `HasNextCursor` is not implemented for `String`
   |
help: the trait `HasNextCursor` is implemented for `Vec<T>`
  --> $WORKSPACE/concord_core/src/pagination/cursor.rs
   |
   | impl<T: Send + 'static> HasNextCursor for Vec<T> {
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
note: required by a bound in `PaginatedRequest::<'a, Cx, E, T>::collect`
  --> $WORKSPACE/concord_core/src/request.rs
   |
   |     pub async fn collect(self) -> Result<Vec<<E::Response as PageItems>::Item>, ApiClientError>
   |                  ------- required by a bound in this associated function
   |     where
   |         E::Response: PageItems + HasNextCursor,
   |                                  ^^^^^^^^^^^^^ required by this bound in `PaginatedRequest::<'a, Cx, E, T>::collect`

error[E0277]: the trait bound `String: PageItems` is not satisfied
  --> tests/usage/fail/fail_non_paginated_paginate.rs:16:13
   |
16 |     let _ = api.ping().paginate().collect().await?;
   |             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ the trait `PageItems` is not implemented for `String`
   |
help: the trait `PageItems` is implemented for `Vec<T>`
  --> $WORKSPACE/concord_core/src/pagination.rs
   |
   | impl<T: Send + 'static> PageItems for Vec<T> {
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
note: required by a bound in `PaginatedRequest::<'a, Cx, E, T>::collect`
  --> $WORKSPACE/concord_core/src/request.rs
   |
   |     pub async fn collect(self) -> Result<Vec<<E::Response as PageItems>::Item>, ApiClientError>
   |                  ------- required by a bound in this associated function
   |     where
   |         E::Response: PageItems + HasNextCursor,
   |                      ^^^^^^^^^ required by this bound in `PaginatedRequest::<'a, Cx, E, T>::collect`

error[E0277]: the trait bound `String: HasNextCursor` is not satisfied
  --> tests/usage/fail/fail_non_paginated_paginate.rs:16:13
   |
16 |     let _ = api.ping().paginate().collect().await?;
   |             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ the trait `HasNextCursor` is not implemented for `String`
   |
help: the trait `HasNextCursor` is implemented for `Vec<T>`
  --> $WORKSPACE/concord_core/src/pagination/cursor.rs
   |
   | impl<T: Send + 'static> HasNextCursor for Vec<T> {
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
note: required by a bound in `PaginatedRequest::<'a, Cx, E, T>::collect`
  --> $WORKSPACE/concord_core/src/request.rs
   |
   |     pub async fn collect(self) -> Result<Vec<<E::Response as PageItems>::Item>, ApiClientError>
   |                  ------- required by a bound in this associated function
   |     where
   |         E::Response: PageItems + HasNextCursor,
   |                                  ^^^^^^^^^^^^^ required by this bound in `PaginatedRequest::<'a, Cx, E, T>::collect`

error[E0277]: the trait bound `String: PageItems` is not satisfied
  --> tests/usage/fail/fail_non_paginated_paginate.rs:16:45
   |
16 |     let _ = api.ping().paginate().collect().await?;
   |                                             ^^^^^ the trait `PageItems` is not implemented for `String`
   |
help: the trait `PageItems` is implemented for `Vec<T>`
  --> $WORKSPACE/concord_core/src/pagination.rs
   |
   | impl<T: Send + 'static> PageItems for Vec<T> {
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
note: required by a bound in `PaginatedRequest::<'a, Cx, E, T>::collect`
  --> $WORKSPACE/concord_core/src/request.rs
   |
   |     pub async fn collect(self) -> Result<Vec<<E::Response as PageItems>::Item>, ApiClientError>
   |                  ------- required by a bound in this associated function
   |     where
   |         E::Response: PageItems + HasNextCursor,
   |                      ^^^^^^^^^ required by this bound in `PaginatedRequest::<'a, Cx, E, T>::collect`

error[E0277]: the trait bound `String: HasNextCursor` is not satisfied
  --> tests/usage/fail/fail_non_paginated_paginate.rs:16:45
   |
16 |     let _ = api.ping().paginate().collect().await?;
   |                                             ^^^^^ the trait `HasNextCursor` is not implemented for `String`
   |
help: the trait `HasNextCursor` is implemented for `Vec<T>`
  --> $WORKSPACE/concord_core/src/pagination/cursor.rs
   |
   | impl<T: Send + 'static> HasNextCursor for Vec<T> {
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
note: required by a bound in `PaginatedRequest::<'a, Cx, E, T>::collect`
  --> $WORKSPACE/concord_core/src/request.rs
   |
   |     pub async fn collect(self) -> Result<Vec<<E::Response as PageItems>::Item>, ApiClientError>
   |                  ------- required by a bound in this associated function
   |     where
   |         E::Response: PageItems + HasNextCursor,
   |                                  ^^^^^^^^^^^^^ required by this bound in `PaginatedRequest::<'a, Cx, E, T>::collect`
